apps/production/pocket-id/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pocket-id
  namespace: pocket-id
spec:
  template:
    spec:
      containers:
        - name: pocket-id
