apps/production/pocket-id/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pocket-id
  namespace: pocket-id
  labels:
    app: pocket-id
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: pocket-id
  template:
    metadata:
      labels:
        app: pocket-id
    spec:
      enableServiceLinks: true
      containers:
        - name: pocket-id
          image: "ghcr.io/pocket-id/pocket-id:v1.14.2"
          ports:
            - name: http
              containerPort: 1411
              protocol: TCP
          volumeMounts:
            - mountPath: /app/data
              name: pocket-id
          resources:
            limits:
              memory: 2Gi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.2"
      volumes:
        - name: pocket-id
          persistentVolumeClaim:
            claimName: pocket-id
