apps/production/pocket-id/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pocket-id
  namespace: pocket-id
  labels:
    app: pocket-id
spec:
  type: ClusterIP
  ports:
    - port: 1411
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: pocket-id
